--- a/RideTogether/app/src/main/res/values/styles.xml
+++ b/RideTogether/app/src/main/res/values/styles.xml
@@ -57,6 +57,13 @@
     <style name="AppTheme.popup" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowCloseOnTouchOutside">true</item>
+        //hint color And Label Color in False State
+        <item name="android:textColorHint">@color/text</item>
+        <item name="android:textSize">20sp</item>
+        //Label color in True State And Bar Color False And True State
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorControlNormal">@color/colorPrimaryDark</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
 
     </style>
 
