--- a/RideTogether/app/src/main/res/layout/content_add_friend.xml
+++ b/RideTogether/app/src/main/res/layout/content_add_friend.xml
@@ -5,8 +5,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="@drawable/bord"
+
     tools:context="donate.cinek.wit.ie.ridetogether.addFriend">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Friend Search"
+        android:id="@+id/FriendRequestScreen"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/SearchUser"
@@ -39,7 +46,8 @@
 
         android:layout_height="match_parent"
         android:layout_below="@+id/friendSearch"
-        tools:context="donate.cinek.wit.ie.ridetogether.addFriend">
+        tools:context="donate.cinek.wit.ie.ridetogether.addFriend"
+        android:id="@+id/view">
 
 
         <ListView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -48,7 +56,6 @@
             android:layout_height="match_parent"
             android:padding="16dp"
             tools:context="donate.cinek.wit.ie.ridetogether.addFriend"
-
             android:id="@+id/foundUsers">
 
         </ListView>
@@ -56,6 +63,9 @@
 
 
     </android.support.design.widget.CoordinatorLayout>
+
+
+
 
 
 
