--- a/RideTogether/app/src/main/res/layout/activity_add_friend.xml
+++ b/RideTogether/app/src/main/res/layout/activity_add_friend.xml
@@ -1,4 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
+
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -19,9 +27,35 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/PopupOverlay" />
 
-    </android.support.design.widget.AppBarLayout>
+        <android.support.design.widget.TabLayout
+            android:id="@+id/addFriendTabs"
+            app:tabIndicatorColor="@color/colorPrimary"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/custom_tab_layout_height"
+            app:tabMode="fixed"
+            app:tabGravity="fill"/>
 
-    <include layout="@layout/content_add_friend" />
+    </android.support.design.widget.AppBarLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpagerAddFriend"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"  />
+
+
 
 
 </android.support.design.widget.CoordinatorLayout>
+<android.support.design.widget.NavigationView
+android:id="@+id/navigation_view"
+android:layout_width="wrap_content"
+android:layout_height="match_parent"
+android:layout_gravity="start"
+app:headerLayout="@layout/drawer_header"
+app:menu="@menu/drawer"/>
+
+
+
+
+
+    </android.support.v4.widget.DrawerLayout>
