--- a/RideTogether/app/src/main/res/layout/fragment_one.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_one.xml
@@ -1,3 +1,6 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,4 +28,4 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin2"
         android:src="@drawable/ic_add_white_24dp" />
 
-</RelativeLayout>
+</RelativeLayout></ScrollView>
