--- a/RideTogether/app/src/main/res/layout/listview_request_item_row.xml
+++ b/RideTogether/app/src/main/res/layout/listview_request_item_row.xml
@@ -28,6 +28,26 @@
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:text="Trip Title"
                 android:id="@+id/txtTitle"
+                android:layout_marginLeft="10dp"
                 android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/mapImage" />
-</RelativeLayout></android.support.v7.widget.CardView></LinearLayout>
+                android:layout_alignParentStart="true" />
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Accept"
+                android:id="@+id/accept"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/deny" />
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Deny"
+                android:id="@+id/deny"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
+
+        </RelativeLayout></android.support.v7.widget.CardView></LinearLayout>
