Currently implenting image profile on the profile tab- next add list of friends of current user

--- a/RideTogether/app/src/main/res/layout/fragment_one.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_one.xml
@@ -1,6 +1,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -14,6 +15,7 @@
         android:id="@+id/listView1"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:theme="@style/Material"
@@ -27,5 +29,5 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin2"
         android:src="@drawable/ic_add_white_24dp" />
-
-</RelativeLayout></ScrollView>
+</RelativeLayout>
+   </ScrollView>
