--- a/RideTogether/app/src/main/res/layout/fragment_two.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_two.xml
@@ -13,15 +13,15 @@ android:orientation="horizontal" >
     android:orientation="vertical" >
 
 
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/userplain"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="38dp"
+        android:id="@+id/circleUserProfileTab"
 
+        />
 </LinearLayout>
 
 <LinearLayout
