--- a/RideTogether/app/src/main/res/layout/fragment_two.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_two.xml
@@ -16,12 +16,22 @@ android:orientation="horizontal" >
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="70dp"
         android:layout_height="70dp"
+
         android:src="@drawable/userplain"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="38dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
         android:id="@+id/circleUserProfileTab"
 
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:text=""
+        android:id="@+id/TripTimer" />
+
 </LinearLayout>
 
 <LinearLayout
