--- a/RideTogether/app/src/main/res/layout/activity_maps.xml
+++ b/RideTogether/app/src/main/res/layout/activity_maps.xml
@@ -58,9 +58,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="25dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
         <!--android:background="@color/maps_background"-->
 
 
@@ -70,9 +70,35 @@
 
 
 
+        <LinearLayout
+            android:id="@+id/LinearLayout02"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true">
+            <Button
+                android:id="@+id/cancelButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/Cancel">
+            </Button>
+            <Button
+                android:id="@+id/OKButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginRight="20dp"
+                android:text="OK">
+            </Button>
+        </LinearLayout>
+
+
 
 
     </RelativeLayout>
+
+
 
 
 </RelativeLayout>
