--- a/RideTogether/app/src/main/res/layout/fragment_two.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_two.xml
@@ -1,14 +1,19 @@
-
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="horizontal" >
+android:layout_height="250dp"
+android:orientation="horizontal"
+    android:id="@+id/topSection">
 
 <LinearLayout
     android:layout_width="0dp"
-    android:layout_height="match_parent"
+    android:layout_height="250dp"
     android:layout_weight="1"
     android:orientation="vertical" >
 
@@ -34,9 +39,9 @@ android:orientation="horizontal" >
 
 </LinearLayout>
 
-<LinearLayout
+    <LinearLayout
     android:layout_width="0dp"
-    android:layout_height="match_parent"
+    android:layout_height="250dp"
     android:layout_weight="1"
     android:layout_margin="1dp"
     android:id="@+id/fragment_two"
@@ -66,4 +71,23 @@ android:orientation="horizontal" >
 
 
 </LinearLayout>
+
+
 </LinearLayout>
+
+<LinearLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="horizontal"
+    android:layout_below="@+id/topSection">
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:padding="16dp"
+tools:context="donate.cinek.wit.ie.ridetogether.msg"
+
+android:id="@+id/usersListView">
+</ListView></LinearLayout>
+</RelativeLayout>
