--- a/RideTogether/app/src/main/res/layout/user_list_item.xml
+++ b/RideTogether/app/src/main/res/layout/user_list_item.xml
@@ -6,7 +6,10 @@
     android:padding="16dp"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:textSize="20sp" />
+    android:textSize="20sp"
+    android:dividerHeight="1px"
+    android:divider="@color/colorPrimary"
+    />
 
 
 
