--- a/RideTogether/app/src/main/res/menu/menu_options.xml
+++ b/RideTogether/app/src/main/res/menu/menu_options.xml
@@ -13,4 +13,20 @@ xmlns:app="http://schemas.android.com/apk/res-auto" >
     app:actionLayout="@layout/action_bar_notifitcation_icon"
 
     app:showAsAction="always"/>
+    <item
+        android:id="@+id/change_city2"
+        android:orderInCategory="1"
+        android:icon="@drawable/ic_person_add_white_24dp"
+        android:title="@string/change_city"
+        app:actionLayout="@layout/action_bar_notifitcation_icon"
+
+        app:showAsAction="always"/>
+    <item
+        android:id="@+id/change_city3"
+        android:orderInCategory="1"
+        android:icon="@drawable/ic_person_add_white_24dp"
+        android:title="@string/change_city"
+        app:actionLayout="@layout/action_bar_notifitcation_icon"
+
+        app:showAsAction="always"/>
 </menu>
