Below bug fixed, implementing place api new feature which will get the id, and in turn the lat and long coorinates needed to mark a map

--- a/RideTogether/app/src/main/res/layout/fragment_three.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_three.xml
@@ -19,7 +19,7 @@
         android:layout_alignParentRight="true"
         app:borderWidth="0dp"
         app:elevation="2dp"
-
+        app:backgroundTint="@color/colorPrimary"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin2"
         android:src="@drawable/ic_add_white_24dp" />
