--- a/RideTogether/app/src/main/res/layout/fragment_one.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_one.xml
@@ -1,14 +1,10 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
 
     <ListView
@@ -18,16 +14,15 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-
+        android:theme="@style/Material"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         app:borderWidth="0dp"
         app:elevation="2dp"
-
+        app:backgroundTint="@color/colorPrimary"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin2"
         android:src="@drawable/ic_add_white_24dp" />
 </RelativeLayout>
-   </ScrollView>
