--- a/RideTogether/app/src/main/res/layout/fragment_one.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_one.xml
@@ -10,6 +10,10 @@
     <ListView
         android:id="@+id/listView1"
         android:layout_width="fill_parent"
+        android:transcriptMode="alwaysScroll"
+        android:layout_marginBottom="10dp"
+        android:paddingBottom="80dp"
+        android:clipToPadding="false"
         android:layout_height="fill_parent" />
 
     <android.support.design.widget.FloatingActionButton
