--- a/RideTogether/app/src/main/res/menu/menu_options.xml
+++ b/RideTogether/app/src/main/res/menu/menu_options.xml
@@ -14,19 +14,19 @@ xmlns:app="http://schemas.android.com/apk/res-auto" >
 
     app:showAsAction="always"/>
     <item
-        android:id="@+id/change_city2"
-        android:orderInCategory="1"
-        android:icon="@drawable/ic_person_add_white_24dp"
+        android:id="@+id/events"
+        android:orderInCategory="2"
+        android:icon="@drawable/ic_event_white_24dp"
         android:title="@string/change_city"
-        app:actionLayout="@layout/action_bar_notifitcation_icon"
+
 
         app:showAsAction="always"/>
     <item
-        android:id="@+id/change_city3"
-        android:orderInCategory="1"
-        android:icon="@drawable/ic_person_add_white_24dp"
+        android:id="@+id/BikeOfTheDay"
+        android:orderInCategory="3"
+        android:icon="@drawable/ic_motorcycle_white_24dp"
         android:title="@string/change_city"
-        app:actionLayout="@layout/action_bar_notifitcation_icon"
+
 
         app:showAsAction="always"/>
 </menu>
