--- a/RideTogether/app/src/main/res/layout/cards_layout.xml
+++ b/RideTogether/app/src/main/res/layout/cards_layout.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         card_view:cardBackgroundColor="@color/colorBGCards"
         card_view:cardCornerRadius="10dp"
+
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
 
@@ -19,46 +20,83 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:weightSum="100"
             >
-
-            <ImageView
+             <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="50"
+            android:orientation="horizontal"
+            >
+                <ImageView
                 android:id="@+id/imageView"
                 android:tag="image_tag"
                 android:layout_width="163dp"
                 android:layout_height="95dp"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_launcher"/>
+                 </LinearLayout>
+
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:layout_weight="2"
-                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="30"
+                android:orientation="horizontal"
                 >
 
                 <TextView
                     android:id="@+id/textViewName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
+
+
                     android:text="Android Name"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-
-                <TextView
-                    android:id="@+id/textViewVersion"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="10dp"
-
-                    android:text="Android Version"
+                    android:layout_gravity="center_vertical"
                     android:textAppearance="?android:attr/textAppearanceMedium"/>
 
-            </LinearLayout>
-        </LinearLayout>
 
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="20"
+
+                android:layout_gravity="center_vertical">
+
+
+            <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView3"
+                android:layout_gravity="center"
+            android:src="@drawable/ic_keyboard_arrow_up_white_24dp"
+            />
+
+                <TextView
+                    android:id="@+id/textViewRating"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="1"
+                    android:paddingTop="20dp"
+
+                    android:gravity="center"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_gravity="center" />
+
+            <ImageView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+
+                android:id="@+id/imageView4"
+                android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
+
+                android:paddingTop="20dp"
+                android:layout_gravity="bottom" />
+            </LinearLayout>
+
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
