--- a/RideTogether/app/src/main/res/layout/upload_image.xml
+++ b/RideTogether/app/src/main/res/layout/upload_image.xml
@@ -8,11 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     >
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Upload"
-        android:id="@+id/UploadButton" />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_recycler_view"
@@ -27,19 +23,19 @@
 
 
 
-    <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/fab"-->
-        <!--android:theme="@style/Material"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--app:borderWidth="0dp"-->
-        <!--app:elevation="2dp"-->
-        <!--app:backgroundTint="@color/colorPrimary"-->
-        <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
-        <!--android:layout_marginBottom="@dimen/activity_vertical_margin2"-->
-        <!--android:src="@drawable/ic_add_white_24dp" />-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabBike"
+        android:theme="@style/Material"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:borderWidth="0dp"
+        app:elevation="2dp"
+        app:backgroundTint="@color/colorPrimary"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/ic_add_white_24dp" />
 
 </RelativeLayout>
 
