--- a/RideTogether/app/src/main/res/layout/fragment_three.xml
+++ b/RideTogether/app/src/main/res/layout/fragment_three.xml
@@ -1,3 +1,4 @@
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +10,12 @@
     <ListView
         android:id="@+id/listView2"
         android:layout_width="fill_parent"
+        android:transcriptMode="alwaysScroll"
+        android:layout_marginBottom="10dp"
+        android:paddingBottom="80dp"
+        android:clipToPadding="false"
         android:layout_height="fill_parent" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:theme="@style/Material"
@@ -23,5 +29,4 @@
         android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin2"
         android:src="@drawable/ic_add_white_24dp" />
-
 </RelativeLayout>
