--- a/RideTogether/app/src/main/res/values-v21/styles.xml
+++ b/RideTogether/app/src/main/res/values-v21/styles.xml
@@ -26,6 +26,8 @@
         <item name="android:windowAllowReturnTransitionOverlap">true</item>
         <item name="android:windowSharedElementEnterTransition">@android:transition/move</item>
         <item name="android:windowSharedElementExitTransition">@android:transition/move</item>
+        <item name="android:colorControlActivated">@color/colorAccent</item>
+
 
         <!-- You can also set colorControlNormal, colorControlActivated
              colorControlHighlight & colorSwitchThumbNormal. -->
@@ -68,6 +70,16 @@
 
         <!--<item name="android:activatedBackgroundIndicator">@drawable/apptheme_activated_background_holo_dark</item>-->
 
+
+    </style>
+
+    <style name="AlertDialogCustom" parent="@android:style/Theme.Dialog">
+        <item name="android:textColor">@color/text</item>
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:topDark">@color/colorPrimaryDark</item>
+        <item name="android:textSize">15sp</item>
+
+        <item name="android:buttonBarNegativeButtonStyle">@color/text</item>
 
     </style>
 
